--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -8,10 +8,10 @@ jobs:
     runs-on: windows-latest
 
     steps:
-    - name: Checkout repository
+    - name: Checkout repository with submodules
       uses: actions/checkout@v4
       with:
-        submodules: true
+        submodules: recursive  # ✅ 递归拉取子模块
 
     - name: Install Ninja
       uses: seanmiddleditch/gha-setup-ninja@v3
